# learn-ai-powered-data-streaming-exercises

./: .devcontainer.json  .gitignore  CHANGELOG.md  LICENSE  README.md  service.yml
exercises/: README.md  exercise.sh
solutions/01-setup-confluent-cloud/: Makefile
solutions/02-data-ingestion-service/: Makefile
solutions/03-kafka-producer/: pyproject.toml
solutions/03-kafka-producer/src/weather_analytics/: data_ingestion_service.py  kafka_producer.py
solutions/03-kafka-producer/tests/weather_analytics/: test_data_ingestion_service.py  test_producer.py
solutions/04-flink-deduplication/flink-sql/: 02_create_deduplicated_table.sql  04_deduplicate_weather_data.sql
solutions/04-flink-deduplication/schemas/: raw_weather_observations-value.json
solutions/05-flink-transformation/flink-sql/: 01_create_deduplicated_weather_table.sql  02_deduplicate_weather_data.sql  04_transform_weather_data.sql
solutions/05-flink-transformation/schemas/: raw_weather_observations-key.json
solutions/06-flink-machine-learning/flink-sql/: 06_alter_simplified_watermark.sql  06_detect_wind_anomalies_ml.sql  08_forecast_temperature_ml.sql
solutions/07-kafka-consumer/flink-sql/: 03_create_simplified_weather_table.sql  05_forecast_temperature_ml.sql
solutions/08-hugging-face-enrichment/flink-sql/: 01_alter_raw_weather_watermark.sql  05_create_simplified_table.sql  07_create_enriched_weather_table.sql
staging/01-setup-confluent-cloud/: Makefile
staging/04-flink-deduplication/flink-sql/: 01_create_deduplicated_weather_table.sql  02_deduplicate_weather_data.sql  (+1 more)
(+31 files in other folders)
