[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-analytics"
version = "0.1.0"
description = "Real-Time Weather Analytics with AI"
requires-python = ">=3.11"
dependencies = [
    # Kafka Client with Schema Registry dependencies
    "confluent-kafka>=2.3.0",
    "attrs>=23.1.0",
    "httpx>=0.24.0",
    "cachetools>=5.3.0",
    "authlib>=1.2.0",
    "referencing>=0.30.0",
    "jsonschema>=4.17.0",
    "orjson>=3.9.0",
    # Hugging Face Transformers for AI Models
    "transformers>=4.35.0",
    "torch>=2.1.0",
    # HTTP Requests for NOAA API
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    # Code Quality
    "flake8>=6.1.0",
    "black>=23.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

